# workflow-platform

./: .gitignore  CONTAINER-NAMING.md  Dockerfile.auditor  PROJECT.md  README.md  SPEC-ai-audit-fixes.md  SPEC-bid-scraper-migration.md  SPEC-etl-migration.md  SPEC-monitoring-consolidation.md  SPEC.md  pyproject.toml
.github/workflows/: docker-publish.yml
auditor/: entrypoint.py
dags/: defendershield-etl.yaml
patterns/: catchup.md
scripts/: run-and-audit.sh
specs/: auditor-v2.md  bid-scraper-access.md  bid-scraper.md  defendershield-etl-access.md  defendershield-etl.md  infrastructure-health.md  phase1_notification_hub.md  phase2_catchup_pattern.md  phase3_dev_prod_envs.md  phase4_behavioral_auditor.md  phase5_workflow_orchestration.md  two_stage_auditor.md
src/workflow_platform/: __init__.py  auditor.py  briefing.py  config.py  dag.py  dokploy_client.py  gap_check.py  health.py  metrics.py  orchestrate.py  two_stage_auditor.py  workflow_env.py
tests/: test_auditor.py  test_auditor_entrypoint.py  test_auditor_v2.py  test_dag.py  test_dokploy_client.py  test_gap_check.py  test_health.py  test_metrics.py  test_orchestrate.py  test_two_stage_auditor.py  test_workflow_env.py
