[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-platform"
version = "0.1.0"
description = "Disciplined development lifecycle platform on top of Dokploy."
requires-python = ">=3.11"
dependencies = [
    "workflow-notify @ git+https://github.com/zzofrea/workflow-notify.git",
    "psycopg[binary]>=3.1",
    "structlog>=24.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.scripts]
workflow-env = "workflow_platform.workflow_env:main"
workflow-audit = "workflow_platform.auditor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_platform"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
